@@ -10,6 +10,6 @@ DIST gentoolkit-0.3.0_rc11.tar.gz 167765 RMD160 65540c67ec0acf15652d6e8ece5e3421
 EBUILD gentoolkit-0.2.4.6.1-r1.ebuild 2068 RMD160 febb1f5857374ca11e89e1d593afb8aceb4eb12c SHA1 b272eec1990a6c54ff4d5fa331b12d226daa3690 SHA256 da78ff2874546d44164b55fdb46e0d86cf02b38ae4f78292d312bd2fa77b6b8b
 EBUILD gentoolkit-0.3.0_rc10-r1.ebuild 1947 RMD160 5f3557d74f2663dfb8c2753220c6d1b8280f4de8 SHA1 56b522d295610ae6507b68821fe188c0804a40fb SHA256 b24500e5ef73c47796d749c3c0b948058d9465ce0f8e6dd2d15fd32b20a55365
 EBUILD gentoolkit-0.3.0_rc11-r3.ebuild 2767 RMD160 aed27bd7910b45093f3211c30f52397bbaf120eb SHA1 6013d420a37ee5e73cd373eacc758a2a98e18147 SHA256 d84ca485a8780370102326f0cdfdceab7631519fcd7f294d44384ddb6151f501
-EBUILD gentoolkit-9999.ebuild 2061 RMD160 bdaf165e292951815a3634fa893cabcbe1c79666 SHA1 4364c9740769ec7375cc25b6881f405c8fec1a22 SHA256 c1295dcd329a988464311e4b661a12ce37d5d8654135593800b6ed0b2781be18
-MISC ChangeLog 59806 RMD160 02676624e57ef15265f42cc30ff62e2481e97e23 SHA1 5b66d4032a2bafc6083e8e33cccc7cfc4a827ff1 SHA256 945a6c11aa310324df63cf656dbe52150ff7ff1bab98ef42e640534c7dc84175
+EBUILD gentoolkit-9999.ebuild 2148 RMD160 8ab402ed7823de534ceb9ef3eaf7e2c1eb01744a SHA1 a78bf82eba0f9951da103174646e854cf811f24f SHA256 e7fb1133f1cb6d3b49dc532f3748fddc3a8e7a5d91a4e3fa08a3a3e5e8d9b520
+MISC ChangeLog 60108 RMD160 876eb0236de0489d9e7d780c58b142477370aabc SHA1 65ba74799ce2d88982f1102ea503ed8f9f50cd3e SHA256 d5f0e3435106259a2162cb17031ee78b8ae01c44cb9efc3d4af7588aaa58b502
 MISC metadata.xml 451 RMD160 b1cce9123da273149c731793696937f9b3d02c60 SHA1 6126c34edcb6ed5f4274e060881378cc1cf10757 SHA256 1a2def4d28f69d6bffeb0b09e97ce53e6822e457d5d9308000a1010dca32abeb
