@@ -1,6 +1,11 @@
 # ChangeLog for app-portage/gentoolkit
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-portage/cvs-repo/gentoo-x86/app-portage/gentoolkit/ChangeLog,v 1.206 2011/02/04 18:29:17 fuzzyray Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-portage/cvs-repo/gentoo-x86/app-portage/gentoolkit/ChangeLog,v 1.207 2011/02/04 18:59:54 fuzzyray Exp $
+
+  04 Feb 2011; Paul Varner <fuzzyray@gentoo.org> gentoolkit-9999.ebuild:
+  Completely remove revdep-rebuild for prefix users that are not running on AIX
+  (Bug 353654). Remove redundant chown and chmod of /var/cache/revdep-rebuild
+  in pkg_postinst(). Import Gentoo Prefix changes and bump to EAPI 3.
 
   04 Feb 2011; Paul Varner <fuzzyray@gentoo.org>
   gentoolkit-0.3.0_rc11-r3.ebuild:
